[package]
name = "bern-test"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"

[dependencies]
bern-test-macros = { version = "0.1.0", path = "macros" }
nb = "1.0.0"
rtt-target = { version = "0.3.0", optional = true }

[features]
autorun = []
colored = []
serial = []
rtt = ["rtt-target"]