[package]
name = "bern-test"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["embedded", "no_std", "cortex-m", "iot", "rtos"]
description = "A Rust test framework for hardware integration tests."
documentation = "https://docs.rs/bern-test"
repository = "https://gitlab.com/bern-rtos/tools/bern-test"
homepage = "https://bern-rtos.org"

[dependencies]
bern-test-macros = "0.1.0"
nb = "1.0.0"
rtt-target = { version = "0.3.0", optional = true }

[features]
default = ["serial", "autorun", "colored"]
autorun = []
colored = []
serial = []
rtt = ["rtt-target"]

[package.metadata.docs.rs]
targets = [
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
]
